<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:jwp="http://schemas.android.com/apk/lib/com.longtailvideo.jwplayer"
    android:id="@+id/forgotfragment1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mobile_screen_background"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/login_scroll_view_bootom_padding">

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@layout/email_heading"
                android:paddingTop="@dimen/login_registration_email_padding_top"
                android:paddingBottom="@dimen/login_registration_email_padding_bottom"
                android:textAlignment="viewStart">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="@dimen/login_registration_email_back_icon_width"
                    android:layout_height="@dimen/login_registration_email_back_icon_height"
                    android:layout_marginStart="@dimen/login_registration_email_back_icon_margin_left"
                    android:layout_marginTop="@dimen/login_registration_email_back_icon_margin_top"
                    android:clickable="true"
                    android:gravity="right|center_vertical|center_horizontal|center|end"
                    android:src="@drawable/back_button_icon" />

                <TextView
                    android:id="@+id/login_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/login_registration_email_heading_margin_left"
                    android:layout_marginTop="@dimen/login_registration_email_heading_margin_top"
                    android:gravity="left|center_vertical|center_horizontal|center|start"
                    android:text="@string/forgot_password"
                    android:textSize="@dimen/login_registration_email_heading_text_size"
                    android:textColor="@color/registration_login_default_text"/>
            </LinearLayout>

            <TextView
                android:id="@+id/step1of2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/forgotpwd_fragment_step1of2_margin_top"
                android:gravity="center"
                android:text="@string/step_1_of_2"
                android:textAlignment="gravity"
                android:textColor="@color/registration_login_default_text"
                android:textDirection="locale"
                android:textSize="@dimen/getotp_fragment_step1of2_text_size"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/text_emailhint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/step1of2"
                android:layout_marginStart="@dimen/login_registration_email_country_margin_left"
                android:layout_marginTop="@dimen/forgotpwd_fragment_email_text_email_hint_margin_top"
                android:layout_marginEnd="@dimen/login_registration_email_country_margin_right"
                android:gravity="start"
                android:text="@string/forgot_pw_enter_email"
                android:textAlignment="gravity"
                android:textColor="@color/registration_login_edit_text"
                android:textDirection="locale"
                android:textSize="@dimen/forgotpwd_fragment_email_text_email_hint_text_size" />

            <RelativeLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_emailhint"
                android:layout_marginStart="@dimen/login_registration_email_country_margin_left"
                android:layout_marginTop="@dimen/forgotpwd_fragment_email_input_email_margin_top"
                android:layout_marginEnd="@dimen/login_registration_email_country_margin_right"
                android:theme="@style/Register_email_hint">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/contact_us_hint_margin_top"
                    android:paddingLeft="@dimen/contact_us_hint_padding_left"
                    android:text="@string/email_id"
                    android:textAlignment="gravity"
                    android:textColor="@color/contact_us_default_text"
                    android:textDirection="locale"
                    android:textSize="@dimen/contact_us_country_text_size"
                    android:visibility="gone"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_phone_ly"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutLabel">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/emailid"
                        android:inputType="textEmailAddress"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/login_registration_mobile_country_text_size"
                        android:textColor="@color/white"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/incorrect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/input_phone_ly"
                    android:layout_marginEnd="@dimen/login_registration_mobile_incorrect_margin_top"
                    android:gravity="end"
                    android:text="@string/incorrect_mobile_number_error"
                    android:textColor="@color/mobile_screen_background"
                    android:textSize="@dimen/login_registration_mobile_minimum_text_text_size"
                    android:visibility="invisible" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/bottom_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/apply_reset_background"
        android:text="@string/send_link"
        android:textSize="@dimen/login_registration_email_bottom_login_text_size"
        android:textColor="@color/white" />

    <include layout="@layout/mobile_progress_bar" />
</RelativeLayout>
