<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:jwp="http://schemas.android.com/apk/lib/com.longtailvideo.jwplayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_wel_come_background"
    android:filterTouchesWhenObscured="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@layout/email_heading"
            android:orientation="horizontal"
            android:paddingTop="@dimen/login_registration_mobile_padding_top"
            android:paddingBottom="@dimen/login_registration_mobile_padding_bottom"
            android:textAlignment="viewStart">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/login_registration_email_back_icon_margin_left"
                android:padding="5dp"
                android:src="@drawable/back_button_icon" />

            <TextView
                android:id="@+id/screen_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/register"
                android:textSize="@dimen/login_registration_mobile_heading_text_size" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/input_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:lineSpacingExtra="@dimen/country_extra_line_spacing">

                    <TextView
                        android:id="@+id/country_text_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/country"
                        android:textColor="@color/contact_us_default_text"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_country_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/country_text_title"
                        android:focusableInTouchMode="false"
                        android:inputType="none"
                        android:isScrollContainer="true"
                        android:textAlignment="viewStart"
                        android:textColor="@color/registration_login_edit_text"
                        android:textDirection="locale"
                        android:textSize="@dimen/login_registration_mobile_country_text_size"
                        android:theme="@style/Register_email_hint" />

                    <ImageView
                        android:id="@+id/input_country_dropdown"
                        android:layout_width="14dp"
                        android:layout_height="9dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="8dp"
                        android:gravity="end"
                        android:src="@drawable/country_drop_down_icon" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mobile_number_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:theme="@style/Register_email_hint">

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="@string/mobile"
                        android:textColor="@color/contact_us_default_text"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_phone_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/description"
                        android:digits="0123456789"
                        android:inputType="phone"
                        android:isScrollContainer="true"
                        android:paddingBottom="@dimen/mobile_extra_line_spacing"
                        android:textColor="@color/registration_login_edit_text"
                        android:textSize="@dimen/login_registration_mobile_phone_text_size" />

                    <TextView
                        android:id="@+id/country_code_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/input_phone_text"
                        android:layout_alignBottom="@+id/input_phone_text"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="gravity"
                        android:textColor="@color/registration_login_default_text"
                        android:textDirection="locale" />

                    <TextView
                        android:id="@+id/incorrect_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_phone_text"
                        android:layout_marginEnd="@dimen/login_registration_mobile_incorrect_margin_top"
                        android:gravity="end"
                        android:text="@string/incorrect_mobile_number_error"
                        android:textColor="@color/view_all_text_color"
                        android:textSize="@dimen/login_registration_mobile_minimum_text_text_size"
                        android:visibility="invisible" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:src="@drawable/or_icon" />

                <RelativeLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:theme="@style/Register_email_hint">

                    <TextView
                        android:id="@+id/email_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="@dimen/contact_us_hint_margin_top"
                        android:text="@string/international_email"
                        android:textColor="@color/contact_us_default_text"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/input_email_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/email_description"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="@dimen/password_extra_line_spacing"
                        android:textColor="#ffffff"
                        android:textSize="@dimen/login_registration_email_country_text_size" />

                    <TextView
                        android:id="@+id/incorrect_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/input_email_text"
                        android:layout_marginEnd="@dimen/login_registration_mobile_incorrect_margin_top"
                        android:gravity="end"
                        android:text="@string/incorrect_email_error"
                        android:textColor="@color/view_all_text_color"
                        android:textSize="@dimen/login_registration_mobile_minimum_text_text_size"
                        android:visibility="invisible" />
                </RelativeLayout>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/login_registration_selector"
                    android:enabled="false"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/login_registration_selector"
                    android:enabled="false"
                    android:text="@string/existing_user_eith_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/login_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_with"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/facebook_login"
                        android:layout_width="50dp"
                        android:layout_height="50dp" />

                    <ImageView
                        android:id="@+id/twitter_login"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="19dp" />

                    <ImageView
                        android:id="@+id/google_login"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="19dp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/skip_explore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/skip_and_explore"
                    android:textColor="#bf006b"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/mobile_progress_bar" />
</RelativeLayout>
